[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/main/editor/creature/tweak-name-row.gd" type="Script" id=2]
[ext_resource path="res://src/main/editor/creature/tweak-dna-button.gd" type="Script" id=3]
[ext_resource path="res://assets/main/editor/creature/edit.png" type="Texture" id=4]

[node name="Name" type="HBoxContainer"]
margin_right = 306.0
margin_bottom = 30.0
custom_constants/separation = 10
script = ExtResource( 2 )

[node name="LabelMargin" type="MarginContainer" parent="."]
margin_right = 100.0
margin_bottom = 30.0
custom_constants/margin_top = 5

[node name="Label" type="Label" parent="LabelMargin"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Name:"
align = 2

[node name="Edit" type="VBoxContainer" parent="."]
margin_left = 110.0
margin_right = 270.0
margin_bottom = 30.0

[node name="Name" type="LineEdit" parent="Edit"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 0 )
theme = ExtResource( 1 )

[node name="ShortName" type="LineEdit" parent="Edit"]
visible = false
margin_top = 34.0
margin_right = 160.0
margin_bottom = 64.0
rect_min_size = Vector2( 160, 0 )
theme = ExtResource( 1 )

[node name="DnaMargin" type="MarginContainer" parent="."]
margin_left = 280.0
margin_right = 306.0
margin_bottom = 30.0
custom_constants/margin_top = 2

[node name="Dna" type="Button" parent="DnaMargin"]
margin_top = 2.0
margin_right = 26.0
margin_bottom = 28.0
rect_min_size = Vector2( 26, 26 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="DnaMargin/Dna"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 4 )
expand = true

[connection signal="button_down" from="DnaMargin/Dna" to="DnaMargin/Dna" method="_on_button_down"]
[connection signal="button_up" from="DnaMargin/Dna" to="DnaMargin/Dna" method="_on_button_up"]
[connection signal="pressed" from="DnaMargin/Dna" to="." method="_on_Dna_pressed"]
[connection signal="focus_exited" from="Edit/Name" to="." method="_on_Edit_focus_exited"]
[connection signal="text_changed" from="Edit/Name" to="." method="_on_Edit_text_changed"]
[connection signal="text_entered" from="Edit/Name" to="." method="_on_Edit_text_entered"]
[connection signal="focus_exited" from="Edit/ShortName" to="." method="_on_ShortName_focus_exited"]
[connection signal="text_changed" from="Edit/ShortName" to="." method="_on_ShortName_text_changed"]
[connection signal="text_entered" from="Edit/ShortName" to="." method="_on_ShortName_text_entered"]
